<resources>
    <string name="app_name">chargingController</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="control">控制</string>
    <string name="battery_charging">充电</string>
    <string name="connect">连接</string>

    <!-- fragment connect   -->
    <string name="ipAddr">ip地址:</string>
    <string name="port">端口:</string>

    <!-- fragment control   -->
    <string name="dir_down">下</string>
    <string name="dir_left">左</string>
    <string name="dir_right">右</string>
    <string name="dir_up">上</string>
    <string name="stop">停止</string>


    <!-- fragment charging   -->

    <string name="mode_I">恒流</string>
    <string name="mode_V">恒压</string>
    <string name="mode_V_or_I">恒压  |  恒流</string>
    <string name="I_ref">I ref (A)</string>
    <string name="U_ref">U ref (V)</string>
    <string name="start_charging">开始充电</string>
    <string name="stop_charging">停止充电</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>