<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_wifi">

    <fragment
        android:id="@+id/nav_control"
        android:name="com.example.chargingcontroller.ControlFragment"
        android:label="@string/control"
        tools:layout="@layout/fragment_control" />

    <fragment
        android:id="@+id/nav_charging"
        android:name="com.example.chargingcontroller.ChargingFragment"
        android:label="@string/battery_charging"
        tools:layout="@layout/fragment_charging" />

    <fragment
        android:id="@+id/nav_wifi"
        android:name="com.example.chargingcontroller.wifiConnectFragment"
        android:label="@string/connect"
        tools:layout="@layout/fragment_connect" />
</navigation>