<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/bt_up"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/dir_up"
        android:src="@drawable/ic_up"
        app:layout_constraintBottom_toTopOf="@+id/bt_stop"
        app:layout_constraintEnd_toEndOf="@+id/bt_stop"
        app:layout_constraintStart_toStartOf="@+id/bt_stop" />

    <ImageButton
        android:id="@+id/bt_left"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/dir_left"
        android:src="@drawable/ic_left"
        app:layout_constraintBottom_toBottomOf="@+id/bt_stop"
        app:layout_constraintEnd_toStartOf="@+id/bt_stop"
        app:layout_constraintTop_toTopOf="@+id/bt_stop" />

    <ImageButton
        android:id="@+id/bt_right"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="60dp"
        android:contentDescription="@string/dir_right"
        android:src="@drawable/ic_right"
        app:layout_constraintBottom_toBottomOf="@+id/bt_stop"
        app:layout_constraintStart_toEndOf="@+id/bt_stop"
        app:layout_constraintTop_toTopOf="@+id/bt_stop" />

    <ImageButton
        android:id="@+id/bt_down"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/dir_down"
        android:src="@drawable/ic_down"
        app:layout_constraintEnd_toEndOf="@+id/bt_stop"
        app:layout_constraintStart_toStartOf="@+id/bt_stop"
        app:layout_constraintTop_toBottomOf="@+id/bt_stop" />

    <ImageButton
        android:id="@+id/bt_stop"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:contentDescription="@string/stop"
        android:src="@drawable/ic_stop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>